--- a/code/Makefile
+++ b/code/Makefile
@@ -3,10 +3,10 @@
 
 CC = g++
 CXXFLAGS = -std=c++14 -O3 -Wall -Wextra -pedantic
-LIBS = -ldnest4 -lpthread
+LIBS = 
 
 default:
-	$(CC) -I$(DNEST4_PATH) $(CXXFLAGS) -c *.cpp
-	$(CC) -pthread -L$(DNEST4_PATH)/DNest4/code -o main *.o $(LIBS)
+	$(CC) $(CXXFLAGS) -c *.cpp
+	$(CC) -o main *.o $(LIBS)
 	rm *.o
 
